--- a/digital-agency.html
+++ b/digital-agency.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Multi Purpose Creative HTML5 Template - Roxine</title>
+    <title>Domestika</title>
     <!-- Font Icons -->
     <link media="all" rel="stylesheet" href="css/fonts/icomoon/icomoon.css">
     <link media="all" rel="stylesheet" href="css/fonts/roxine-font-icon/roxine-font.css">
@@ -55,9 +55,9 @@
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Home </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Inicio </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                            <li><a href="index.html"> Creative Agency </a></li>
+                                            <li><a href="index.html"> Agencia </a></li>
                                             <li><a href="design-studio.html"> Design Studio </a></li>
                                             <li><a href="digital-agency.html"> Digital Agency </a></li>
                                             <li><a href="construction.html"> Construction </a></li>
@@ -65,7 +65,7 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Features </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Cursos </a>
                                         <ul class="dropdown-menu  no-border-radius">
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#">Header Styles <i class="icon-ios-more icn-right"></i></a>
@@ -207,7 +207,7 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown dropdown-full-width-g" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" data-title="Pages">Elements </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" data-title="Pages">Elementos </a>
                                         <div class="dropdown-menu no-border-radius no-padding" data-adjust="2">
                                             <div class="row row-autoheight no-gutters">
                                                 <div class="col-lg-3 col-autoheight clearfix">
@@ -374,18 +374,18 @@
                                     data-paddingright="[0,0,0,0]"
                                     data-paddingbottom="[0,0,0,0]"
                                     data-paddingleft="[0,0,0,0]"
-                                    style="background-color:rgba(0, 0, 0, 0.56);"> </div>
+                                    style="background-color:rgba(255, 0, 0, 0.56);"> </div>
                                     <div class="slider-sub-title text-white tp-caption tp-resizeme rs-parallaxlevel-0" data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" data-y="['top','top','middle','middle']" data-voffset="['225','100','10','20']" data-width="['1200','960','720','540']" data-textalign="left" data-fontsize="['30','28','24','20']" data-lineheight="['72','62','50','50']" data-letterspacing="5" data-height="none" data-whitespace="normal" data-transform_idle="o:1;" data-transform_in="z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:0px;" data-mask_out="x:inherit;y:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-paddingright="[25,25,25,25]" data-paddingleft="[25,25,25,25]">
-                                    Art. Concept. Draw
+                                    Domestika
                                     </div>
                                     <div class="slider-main-title text-white tp-caption tp-resizeme rs-parallaxlevel-1" data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" data-y="['top','top','middle','middle']" data-voffset="['250','150','50','50']" data-width="['1200','960','720','540']" data-textalign="left" data-fontsize="['100','88','64','48']" data-fontweight="900" data-letterspacing="['25','10','5','0']" data-lineheight="['184','100','72','60']" data-height="none" data-whitespace="normal" data-transform_idle="o:1;" data-transform_in="z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:0px;" data-mask_out="x:inherit;y:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-paddingright="[25,25,25,25]" data-paddingleft="[25,25,25,25]">
-                                    RECREATE
+                                    CURSOS
                                     </div>
                                     <div class="slider-text text-white tp-caption tp-resizeme rs-parallaxlevel-2" data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" data-y="['top','top','middle','middle']" data-voffset="['450','230','110','110']" data-width="['600','555','555','480']" data-textalign="left" data-fontsize="['14','14','14','14']" data-lineheight="['30','30','22','22']" data-fontweight="400" data-height="none" data-whitespace="normal" data-transform_idle="o:1;" data-transform_in="z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:0px;" data-mask_out="x:inherit;y:inherit;" data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-paddingright="[25,25,25,25]" data-paddingleft="[25,25,25,25]">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    </div>
+                                    </div> 
                                     <div class="tp-caption rev-btn  rs-parallaxlevel-10" id="slide-163-layer-1" data-x="['left','left','left','left']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['300','60','240','220']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power3.easeOut;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_out="x:inherit;y:inherit;" data-start="1250" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-164","delay":""}]' data-responsive_offset="on" data-paddingtop="[0,0,0,0]" data-paddingright="[25,25,25,25]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[25,25,25,25]">
-                                        <a class="btn btn-primary has-radius-small" href="#">EXPLORE WORK</a>
+                                        <a class="btn btn-primary has-radius-small" href="#">INSCRIBETE AHORA</a>
                                     </div>
                                 </li>
                             </ul>
@@ -401,10 +401,10 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="text-wrap">
-                                            <h3>The Art.</h3>
-                                            <p><span>When you have limited space to showcase work.</span></p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-                                            <div class="mt-5"><a href="#" class="btn btn-primary has-radius-small">DESIGNS</a></div>
+                                            <h3>Esto es ARTE</h3>
+                                            <p><span>Cursos con descuento</span></p>
+                                            <p>Aprende ilustración, diseño, craft, animación, 3D, fotografía, marketing y mucho más. Dibujo, pintura, diseño o carpintería: en Domestika encontrarás el curso que buscas. Certificados gratis. Cursos 100% Online. La Comunidad Creativa. Acceso ilimitado. Empieza a crear.</p>
+                                            <div class="mt-5"><a href="#" class="btn btn-primary has-radius-small">VER MÁS</a></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -416,10 +416,10 @@
                                 <div class="row">
                                     <div class="col col-lg-6">
                                         <div class="text-wrap text-lg-right">
-                                            <h3>The Code.</h3>
-                                            <p><span>Roxine is thoroughly tested for code and speed.</span></p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-                                            <div class="mt-5"><a href="#" class="btn btn-primary has-radius-small">PROGRAMS</a></div>
+                                            <h3>¿Es bueno?</h3>
+                                            <p><span>Claro que sí</span></p>
+                                            <p>Aunque hay algunas críticas, la gran mayoría dice que le gustaron los cursos y tuvieron una buena experiencia en Domestika. La página recibió una calificación media de los usuarios de 4.5/5. En las tiendas de aplicaciones, también puedes ver algunas calificaciones.</p>
+                                            <div class="mt-5"><a href="#" class="btn btn-primary has-radius-small">VALORACIÓNES</a></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 text-right">
@@ -465,7 +465,7 @@
                     <div class="row">
                         <div class="col-md-2 col-sm-4">
                             <div class="footer-nav">
-                                <h4>Design</h4>
+                                <h4>Diseño</h4>
                                 <ul>
                                     <li><a href="#">Graphics</a></li>
                                     <li><a href="#">Web</a></li>
@@ -476,7 +476,7 @@
                         </div>
                         <div class="col-md-2 col-sm-4">
                             <div class="footer-nav">
-                                <h4>Code</h4>
+                                <h4>Cursos</h4>
                                 <ul>
                                     <li><a href="#">WordPress</a></li>
                                     <li><a href="#">Joomla</a></li>
@@ -490,23 +490,23 @@
                             <div class="footer-nav">
                                 <h4>Software</h4>
                                 <ul>
-                                    <li><a href="#">iOS Development</a></li>
+                                    <li><a href="#">Illustrator</a></li>
                                     <li><a href="#">Android</a></li>
-                                    <li><a href="#">Desktop</a></li>
+                                    <li><a href="#">Photoshop</a></li>
                                     <li><a href="#">X Code</a></li>
                                     <li><a href="#">Grunt / Gulp</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-5">
-                            <h4>Contact us</h4>
+                            <h4>Contacto</h4>
                             <div class="row">
                                 <div class="col-md-6 col-sm-6 col">
                                     <p>Email</p>
-                                    <p><a href="mailto:info@waituk.com">info@waituk.com</a></p>
+                                    <p><a href="mailto:info@waituk.com">info@domestika.com</a></p>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col">
-                                    <p>Phone</p>
+                                    <p>Celular</p>
                                     <p><a href="tel:9851108896">9851108896</a></p>
                                 </div>
                             </div>
@@ -514,7 +514,7 @@
                                 <img src="img/logo.svg" alt="image-description">
                             </div>
                             <div class="mt-3">
-                                <p>Copyright 2017 - <a href="https://www.waituk.com">Waituk</a> </p>
+                                <p>Copyright 2022 - <a href="https://www.waituk.com">Waituk</a> </p>
                             </div>
                         </div>
                     </div>
