--- a/portfolio-3-col.html
+++ b/portfolio-3-col.html
@@ -395,7 +395,7 @@
                                                     <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Tu boda en capilla</h2>
                                                 </div>
                                             </div>
                                         </div>
