Update Actividad en clase 1.html
caja 2

--- a/Actividad en clase 1.html
+++ b/Actividad en clase 1.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+    <head>
+
+    <style type="text/css">
+
 .caja1 {
     background-color: rgb(240, 191, 100);
     margin:1% 5%;
@@ -5,8 +11,24 @@
     text-align: center;
     width: 20% ;
     float: left;
+}
+
+.caja2 {
+    background-color: rgb(100, 240, 198);
+    margin:1%;
+    padding: 150px;
+    text-align: center;
+    width: 20%;
+    float: left;
+}
     <div class="caja1">
         <h2 style = "color:white;">
             Caja 1
         </h2>
+    </div>
+
+    <div class="caja2">
+    <h2 style = "color:white;">
+        Caja 2
+    </h2>
     </div>
