Update Actividad en clase 1.html
caja 3

--- a/Actividad en clase 1.html
+++ b/Actividad en clase 1.html
@@ -21,6 +21,15 @@
     width: 20%;
     float: left;
 }
+.caja3 {
+
+    background-color: rgb(166, 122, 224);
+    padding: 10px;
+    text-align: center;
+    width: 80%;
+    clear: both;
+    margin:1% 10%;
+}
     <div class="caja1">
         <h2 style = "color:white;">
             Caja 1
@@ -31,4 +40,11 @@
     <h2 style = "color:white;">
         Caja 2
     </h2>
+    </div>
+
+    <div class="caja3">
+            <h2 style = "color:white;">
+                Caja 3
+            </h2>
+        </div>
     </div>
