Update Actividad en clase 1.html
Botón y rolover

--- a/Actividad en clase 1.html
+++ b/Actividad en clase 1.html
@@ -48,3 +48,14 @@
             </h2>
         </div>
     </div>
+
+    <div class="boton">
+        <h2 style = "color:white;">
+            Botón
+        </h2>
+
+    </div>
+
+
+</body>
+    </html>
