--- a/Actividad en clase 1.html
+++ b/Actividad en clase 1.html
@@ -21,6 +21,7 @@
     width: 20%;
     float: left;
 }
+
 .caja3 {
 
     background-color: rgb(166, 122, 224);
@@ -30,6 +31,22 @@
     clear: both;
     margin:1% 10%;
 }
+
+.boton {
+    background-color: rgb(224, 122, 215);
+    width: 8%;
+    text-align: center;
+    border-radius: 8px;
+    margin: 0 auto;
+}
+.boton :hover {
+    background-color: rgb(154, 207, 167);
+    border-radius: 8px;
+}
+        </style>
+
+    </head>
+
     <div class="caja1">
         <h2 style = "color:white;">
             Caja 1
