--- a/construction.html
+++ b/construction.html
@@ -592,7 +592,7 @@
                                             <figcaption class="team-des-v2">
                                                 <span class="sub"> LLámanos </span>
                                                 <strong class="content-title name">a nuestras líneas telefónicas</strong>
-                                                <p>En la parte inferior de muestra página web y en la descripción de todas nuestras redes sociales, nos podrás llamar y te responderemos cualquier duda que tengas. </p>
+                                                <p>En la parte inferior de muestra página web y en la descripción de todas nuestras redes sociales, nos podrás llamar y te responderemos cualquier duda que  </p>
                                             </figcaption>
                                         </figure>
                                     </div>
